# e-commerce-shop-vertica-dwh

./: pyproject.toml
package/: main.py  utils.py
sql/: stg-ddl.sql
