[tool.poetry]
name = "e-commerce-shop-greenplum-dwh"
version = "0.1.0"
description = ""
authors = ["Leonidee"]
readme = "README.md"
packages = [{include = "e_commerce_shop_greenplum_dwh"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
boto3 = "^1.26.99"
coloredlogs = "^15.0.1"
sqlalchemy = "^2.0.7"
ipykernel = "^6.22.0"
pandas = "^1.5.3"
sqlalchemy-vertica-python = "^0.5.10"
openpyxl = "^3.1.2"
tabulate = "^0.9.0"
faker = "^18.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
